[gd_scene load_steps=19 format=2]

[ext_resource path="res://player/Player_hack/Player_hack.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player_hack/target.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player_hack/Player_hack.gd" type="Script" id=3]
[ext_resource path="res://maps/map_sistema/blocks_maps.tres" type="MeshLibrary" id=4]
[ext_resource path="res://props/blocks/block_gray.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy/enemy_hack.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy/enemy_hack_stop.tscn" type="PackedScene" id=7]
[ext_resource path="res://maps/mine_games/hacked.gd" type="Script" id=8]
[ext_resource path="res://maps/mine_games/complete_game1.gd" type="Script" id=9]
[ext_resource path="res://player/UI/complete_game.tscn" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 51.0815, 0.00113748, 51.2902 )

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="ProceduralSky" id=4]
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 0.380392, 0.380392, 0.380392, 1 )
ground_bottom_color = Color( 0.101961, 0.101961, 0.101961, 1 )
ground_horizon_color = Color( 0.380392, 0.380392, 0.380392, 1 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
glow_enabled = true
glow_strength = 0.87
glow_bloom = 0.43
glow_blend_mode = 1

[sub_resource type="CubeMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.282353 )
emission_enabled = true
emission = Color( 0.337255, 0.988235, 0.262745, 1 )
emission_energy = 12.86
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=8]

[node name="game" type="Spatial"]
script = ExtResource( 8 )

[node name="Timer_reset" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="floor and ceiling" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.25024, 0, 0, -9.43546 )

[node name="CollisionShape" type="CollisionShape" parent="floor and ceiling"]
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="floor and ceiling"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03505, 0 )
shape = SubResource( 1 )

[node name="target" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 1.96125e-05, 0.264046, -60.1904 )

[node name="Player_hack" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.231491, -62.7265 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 50, 8.74228e-08, 0, -4.37114e-06, 1, 0, 0, 0, -76.443, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="blocks_gray" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.987, 0, 19.944 )

[node name="block_gray" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 1.00891, 1.00455, 6.97352 )

[node name="block_gray2" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 2.98359, 1.00455, 6.97352 )

[node name="block_gray7" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 1.00891, 1.00455, 8.96771 )

[node name="block_gray8" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 2.98359, 1.00455, 8.96771 )

[node name="block_gray3" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 4.99427, 1.00455, 6.97352 )

[node name="block_gray6" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 4.99427, 1.00455, 8.96481 )

[node name="block_gray4" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 6.98277, 1.00455, 6.97352 )

[node name="block_gray5" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 6.98277, 1.00455, 8.95621 )

[node name="block_gray9" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 4.99427, 1.00455, 10.9934 )

[node name="block_gray11" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 6.99388, 1.005, 11 )

[node name="block_gray10" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 4.99427, 1.00455, 12.9846 )

[node name="block_gray12" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 6.98277, 1.00455, 12.976 )

[node name="block_gray13" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 1.02325, 1.00455, 12.9846 )

[node name="block_gray14" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 3.01175, 1.00455, 12.976 )

[node name="block_gray15" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 4.99427, 1.00455, 14.997 )

[node name="block_gray16" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 6.98277, 1.00455, 14.9884 )

[node name="block_gray17" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 1.02325, 1.00455, 14.997 )

[node name="block_gray18" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 3.01175, 1.00455, 14.9884 )

[node name="block_gray19" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 1.02325, 1.00455, 17.0016 )

[node name="block_gray20" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 3.01175, 1.00455, 16.993 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 4 )
data = {
"cells": PoolIntArray( 18, 0, 0, 65517, 0, 0, 18, 1, 0, 65517, 1, 0, 18, 2, 0, 65517, 2, 0, 18, 3, 0, 65517, 3, 0, 18, 4, 0, 65517, 4, 0, 18, 5, 0, 65517, 5, 0, 18, 6, 0, 65517, 6, 0, 18, 7, 0, 65517, 7, 0, 17, 8, 0, 65518, 8, 0, 16, 9, 0, 65519, 9, 0, 15, 10, 536870912, 65520, 10, 0, 14, 11, 0, 16, 11, 5, 65521, 11, 0, 13, 12, 0, 65522, 12, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 13, 1610612736, 10, 13, 0, 11, 13, 0, 12, 13, 0, 65523, 13, 0, 65524, 13, 0, 65525, 13, 1073741824, 65526, 13, 0, 65527, 13, 0, 65528, 13, 0, 65529, 13, 0, 65530, 13, 0, 65531, 13, 536870912, 65532, 13, 0, 65533, 13, 1073741824, 2, 14, 536870912, 65533, 14, 0, 2, 15, 0, 65533, 15, 0, 2, 16, 0, 65530, 16, 1, 65533, 16, 0, 2, 17, 0, 65533, 17, 0, 2, 18, 0, 65533, 18, 0, 2, 19, 0, 65533, 19, 0, 2, 20, 0, 65533, 20, 0, 2, 21, 0, 65533, 21, 0, 2, 22, 0, 65533, 22, 0, 2, 23, 0, 5, 23, 1, 65533, 23, 536870912, 2, 24, 0, 65533, 24, 0, 0, 25, 0, 1, 25, 0, 2, 25, 0, 65533, 25, 0, 65534, 25, 0, 65535, 25, 0, 0, 65501, 0, 1, 65501, 0, 2, 65501, 0, 3, 65501, 0, 4, 65501, 0, 5, 65501, 0, 65530, 65501, 0, 65531, 65501, 0, 65532, 65501, 0, 65533, 65501, 0, 65534, 65501, 0, 65535, 65501, 0, 5, 65502, 0, 65530, 65502, 0, 5, 65503, 0, 65530, 65503, 0, 5, 65504, 0, 65530, 65504, 0, 5, 65505, 0, 65530, 65505, 0, 5, 65506, 0, 65530, 65506, 0, 2, 65507, 536870912, 3, 65507, 0, 4, 65507, 0, 5, 65507, 0, 65530, 65507, 536870912, 65531, 65507, 536870912, 65532, 65507, 0, 65533, 65507, 1610612736, 2, 65508, 1073741824, 65533, 65508, 0, 2, 65509, 536870912, 65533, 65509, 0, 2, 65510, 0, 5, 65510, 1, 65533, 65510, 0, 2, 65511, 0, 65533, 65511, 0, 2, 65512, 0, 65533, 65512, 0, 2, 65513, 0, 3, 65513, 0, 4, 65513, 0, 5, 65513, 0, 6, 65513, 0, 7, 65513, 0, 8, 65513, 0, 9, 65513, 0, 10, 65513, 1073741824, 11, 65513, 0, 12, 65513, 0, 65523, 65513, 0, 65524, 65513, 1610612736, 65525, 65513, 0, 65526, 65513, 0, 65527, 65513, 0, 65528, 65513, 0, 65529, 65513, 0, 65530, 65513, 1073741824, 65531, 65513, 1610612736, 65532, 65513, 0, 65533, 65513, 0, 13, 65514, 0, 65522, 65514, 0, 14, 65515, 0, 65519, 65515, 3, 65521, 65515, 536870912, 15, 65516, 0, 65520, 65516, 0, 16, 65517, 0, 65519, 65517, 0, 17, 65518, 0, 65518, 65518, 0, 18, 65519, 0, 65517, 65519, 0, 18, 65520, 0, 65517, 65520, 0, 18, 65521, 0, 65517, 65521, 0, 18, 65522, 0, 65517, 65522, 0, 18, 65523, 0, 65517, 65523, 0, 18, 65524, 0, 65517, 65524, 0, 18, 65525, 0, 65517, 65525, 0, 18, 65526, 0, 65517, 65526, 0, 18, 65527, 0, 65517, 65527, 0, 18, 65528, 0, 65517, 65528, 0, 18, 65529, 0, 65517, 65529, 0, 18, 65530, 0, 65517, 65530, 0, 18, 65531, 0, 65517, 65531, 0, 18, 65532, 0, 65517, 65532, 0, 18, 65533, 0, 65517, 65533, 0, 18, 65534, 0, 65517, 65534, 0, 18, 65535, 0, 65517, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="enemy_hack" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.4522, 0.32888, -10.0931 )

[node name="enemy_hack6" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.9605, 0.32888, -8.81368 )

[node name="enemy_hack_stop" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.0370235, 0.428848, -13.8876 )

[node name="done_game" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0376248, 1.18247, 47.636 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Area" type="Area" parent="done_game"]
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="done_game/Area"]
shape = SubResource( 8 )

[node name="complete_game" parent="." instance=ExtResource( 10 )]
[connection signal="body_entered" from="done_game/Area" to="done_game/Area" method="_on_Area_body_entered"]
